EXTREMELY unoptimized network train() method, as well as revamped Predict() method